add project 1.html

--- a/project 1.css
+++ b/project 1.css
@@ -5,7 +5,7 @@
 </Head>
 <Body>
 
-    <form action="./index2.Html">
+    <form>
         <table border="0px" cellpadding="10px" cellspacing="0px" style="text-align: left; background-color: skyblue;color: black;">
         <tr>
             <td colspan="2"> 
